CSS contrast fix

--- a/_sass/_engagement-report.scss
+++ b/_sass/_engagement-report.scss
@@ -79,7 +79,7 @@ $bg-airport: #702c0f;
 
 		.caption {
 			font-size: 14px;
-			color: #777;
+			color: #676767;
 		}
 
 		// // Fixes for lists next to floating divs
